--- a/package.json
+++ b/package.json
@@ -1,35 +1,54 @@
 {
-  "name": "chuck-norris",
+  "name": "user-login",
   "version": "0.1.0",
   "private": true,
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|jpg|png|svg)$": "<rootDir>/empty-module.js"
+    },
+    "automock": false
+  },
   "dependencies": {
-    "@material-ui/core": "^3.8.3",
-    "@material-ui/icons": "^3.0.2",
-    "lodash": "^4.17.11",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.3.1",
+    "@material-ui/core": "^3.9.2",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
+    "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
+    "cors": "^2.8.5",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
+    "express": "^4.16.4",
+    "jest": "^24.1.0",
+    "json-server": "^0.14.2",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
+    "react-helmet-async": "^0.2.0",
+    "react-jss": "^8.6.1",
     "react-redux": "^6.0.0",
-    "react-redux-form": "^1.16.12",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "2.1.3",
     "redux": "^4.0.1",
-    "redux-async": "^2.0.1",
-    "redux-form": "^8.1.0",
+    "redux-mock-store": "^1.5.3",
+    "redux-promise-middleware": "^6.0.1",
     "redux-thunk": "^2.3.0",
-    "superagent": "^4.1.0",
-    "uuid": "^3.3.2"
+    "save-dev": "^2.0.0",
+    "superagent": "^4.1.0"
   },
+  "proxy": "http://localhost:3001",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently --kill-others-on-fail 'yarn server' 'yarn client'",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "test": "jest client",
+    "eject": "react-scripts eject",
+    "server": "nodemon config.js",
+    "client": "cd client && yarn start"
   },
   "browserslist": [
     ">0.2%",
@@ -39,6 +58,10 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3"
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/register": "^7.0.0",
+    "concurrently": "^4.0.1",
+    "react-test-renderer": "^16.8.1"
   }
 }
